# Devspin_project

./: .gitignore  COMMANDS.md  OBSOLETE_PLAN.md  explan.MD
devBox_cli/src/: error.rs  main.rs
devBox_cli/src/cli/: start.rs
devBox_cli/src/config/: yaml_parser.rs
devbox_cli/: Cargo.toml
devbox_cli/src/: error.rs  lib.rs  main.rs
devbox_cli/src/cli/: init.rs  mod.rs  start.rs
devbox_cli/src/configs/: yaml_parser.rs
devbox_cli/tests/: config_tests.rs  debug_init.sh
devbox_cli/tests/fixtures/background-project/: devbox.yaml
devbox_cli/tests/fixtures/commands_test.rs/: devbox.yaml
devbox_cli/tests/fixtures/test-project/: devbox.yaml
devbox_cli/tests/fixtures/verbose-project/: devbox.yaml
devspin/: index.js  package.json
devspin_cli/: Cargo.toml
devspin_cli/src/: error.rs  lib.rs  main.rs
devspin_cli/src/cli/: init.rs  mod.rs  start.rs
devspin_cli/src/configs/: mod.rs  yaml_parser.rs
devspin_cli/src/process/: global.rs  mod.rs  state.rs
devspin_cli/tests/: config_tests.rs
tests_scripts/: init_test.sh
