[package]
name = "devspin_cli"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1.0", features = ["full"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.9.8"
config = "0.15.18"
dirs = "5.0"
once_cell = "1.0"

# Process Management
sysinfo = "0.30"  # System monitoring
nix = "0.27"      # Unix process control
which = "4.4"     # Find executables

# File System
directories = "5.0"  # Standard config paths
ignore = "0.4"       # .gitignore support

# Terminal UI
console = "0.15"     # Terminal colors/styling
indicatif = "0.17"   # Progress bars
dialoguer = "0.11"   # Interactive prompts

# Networking
reqwest = { version = "0.11", features = ["json"] }  # HTTP client
port_check = "0.1"   # Check if ports are available

# Error Handling
anyhow = "1.0"       # Easy error handling
thiserror = "1.0"    # Custom error types

log = "0.4"
env_logger = "0.10"
color-eyre = "0.6"

dotenvy = "0.15"

[target.'cfg(unix)'.dependencies]
users = "0.11"       # User information

[dev-dependencies]
devbox_cli = { path = "." }
tempfile = "3.8"     # Testing
assert_cmd = "2.0"   # Command assertion